 - Change exit code used for bad command line argument.
 - By default, do not use proxy for localhost (BUG 921).
 - Fix scrolling for text search.
 - Added 'save' key action (not bound by default).
 - Tooltips
 - Fix segfault when radio button lacks name attribute.
 - Enable popup menu below bottom of page content (BUG#856).
 - Handle JPEGs with CMYK color space.
 - Allow keysyms in keysrc.
   Patches: corvid
+- Support for the letter-spacing property.
   Patch: Johannes Hofmann, corvid
+- Fixed a bug in w3c_mode. In fact it wasn't working at all.
 - Improve stylesheet menu.
   Patches: Jeremy Henty

-----------------------------------------------------------------------------

dillo-2.1.1 [Jul 3, 2009]

+- Add additional size checks for images.
   Patch: Jorge Arellano Cid, Johannes Hofmann, corvid
+- Fixed a bug in parsing RGB color values (CSS).
 - Added support for css colors of the form rgb(255, 255, 255).
 - Assert that SimpleVector size is positive.
   Patches: Johannes Hofmann
+- Removed redundant system includes.
 - Added the "nop" keybinding (nop = NO_OPERATION; cancels a default hook).
 - Added 'stop' key action (not bound by default).
 - Fixed segfault when URL is NULL and dpis can't be found.
   Patches: place (AKA corvid)
+- Reduced 'warning: ignoring return value of ...'
   Patch: Michal Nowak, Jorge Arellano Cid
+- Check chdir() return code in Paths::init.
 - Removed return from a_Nav_unref_buf()
 - Do not build proto.c (file is empty); GCC warning
   Patches: Michal Nowak

-----------------------------------------------------------------------------

dillo-2.1 [Jun 15, 2009]

+- Added ipv6 addresses iteration and ipv4 fallback.
   Patch: James Turner, Jorge Arellano Cid
+- Added support for numeric IPv6 addresses entered into the url bar.
 - Made the DNS resolver report in numeric address notation.
 - Used the URL authority part instead of stripped default port in HTTP query.
 - Fixed Bookmarks modify's HTML so it wraps nicely on handhelds.